# panko

./: .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  README.md  bacon.toml  rust-toolchain.toml
panko/: Cargo.toml
panko-compiletest/: Cargo.toml
panko-compiletest/src/: lib.rs
panko-compiletest/src/snapshots/: panko_compiletest__layout-panko__tests__cases__decl_in_function__test_error_array_of_incomplete_type.c.snap  panko_compiletest__layout-panko__tests__cases__decl_in_function__test_undefined_name.c.snap  panko_compiletest__layout-panko__tests__cases__decl_in_global_scope__test_error_declaration_without_type.c.snap  panko_compiletest__layout-panko__tests__cases__decl_in_global_scope__test_error_declare_varargs_function_with_void_param.c.snap  panko_compiletest__layout-panko__tests__cases__decl_in_global_scope__test_error_diagnostics_from_multiple_steps_are_sorted.c.snap  panko_compiletest__layout-panko__tests__cases__decl_in_global_scope__test_error_duplicate_volatile.c.snap  panko_compiletest__layout-panko__tests__cases__decl_in_global_scope__test_error_invalid_function_decls.c.snap  panko_compiletest__layout-panko__tests__cases__decl_in_global_scope__test_error_redeclaration_with_different_type.c.snap  panko_compiletest__layout-panko__tests__cases__decl_in_global_scope__test_function_definition.c.snap  panko_compiletest__layout-panko__tests__cases__decl_in_global_scope__test_multiple_variables_in_one_decl.c.snap  panko_compiletest__layout-panko__tests__cases__decl_in_global_scope__test_pointer.c.snap  panko_compiletest__layout-panko__tests__cases__execute__arithmetic__test_alignof.c.snap  panko_compiletest__layout-panko__tests__cases__execute__arithmetic__test_postdecrement.c.snap  panko_compiletest__layout-panko__tests__cases__execute__arithmetic__test_ptrdiff_simple.c.snap  panko_compiletest__layout-panko__tests__cases__execute__arithmetic__test_unary_compl.c.snap  panko_compiletest__layout-panko__tests__cases__execute__arithmetic__test_unary_not.c.snap  panko_compiletest__layout-panko__tests__cases__execute__arithmetic__test_unary_plus.c.snap  panko_compiletest__layout-panko__tests__cases__execute__arrays__test_define_already_declared_array.c.snap  panko_compiletest__layout-panko__tests__cases__execute__arrays__test_multidimensional_array_as_parameter.c.snap  panko_compiletest__layout-panko__tests__cases__execute__arrays__test_multidimensional_array_length.c.snap  panko_compiletest__layout-panko__tests__cases__execute__arrays__test_multidimensional_array_size.c.snap  panko_compiletest__layout-panko__tests__cases__execute__arrays__test_single_dimensional_array_size.c.snap  panko_compiletest__layout-panko__tests__cases__execute__call__test_call_varargs_with_params_on_stack.c.snap  panko_compiletest__layout-panko__tests__cases__execute__call__test_return_void_from_void_function.c.snap  panko_compiletest__layout-panko__tests__cases__execute__call__test_simple.c.snap  panko_compiletest__layout-panko__tests__cases__execute__call__test_simple_declaration.c.snap  panko_compiletest__layout-panko__tests__cases__execute__call__test_simple_varargs.c.snap  panko_compiletest__layout-panko__tests__cases__execute__call__test_void_return.c.snap  panko_compiletest__layout-panko__tests__cases__execute__char__test_prefixed_char_literal_types.c.snap  panko_compiletest__layout-panko__tests__cases__execute__conditional__test_conditional.c.snap  panko_compiletest__layout-panko__tests__cases__execute__conditional__test_conditional_both_branches_are_void.c.snap  panko_compiletest__layout-panko__tests__cases__execute__conditional__test_conditional_only_evaluates_taken_branch.c.snap  panko_compiletest__layout-panko__tests__cases__execute__conditional__test_conditional_with_pointers.c.snap  panko_compiletest__layout-panko__tests__cases__execute__generic__test_functions_match_function_ptr.c.snap  panko_compiletest__layout-panko__tests__cases__execute__initialisation__test_complex_expressions_in_braced_initialisers.c.snap  panko_compiletest__layout-panko__tests__cases__execute__initialisation__test_deduce_array_length_from_braced_init.c.snap  panko_compiletest__layout-panko__tests__cases__execute__initialisation__test_flat_braced_init.c.snap  panko_compiletest__layout-panko__tests__cases__execute__initialisation__test_multilevel_designated_initialisation_of_array.c.snap  panko_compiletest__layout-panko__tests__cases__execute__preprocessor__include__test_include_macro_bracketed.c.snap  panko_compiletest__layout-panko__tests__cases__execute__preprocessor__include__test_include_system_header.c.snap  (+318 more)
panko-derive-report/: Cargo.toml
panko-derive-report/src/: lib.rs
panko-lex/: Cargo.toml
panko-lex/src/: bump.rs  constable_path.rs  lib.rs  typedef_names.rs
panko-parser/: Cargo.toml  build.rs
panko-parser/src/: as_sexpr.rs  ast.rs  grammar.lalrpop  indent_lines.rs  lib.rs  nonempty.rs  preprocess.rs  sexpr_builder.rs
panko-parser/src/ast/: as_sexpr.rs
panko-parser/src/preprocess/: diagnostics.rs  eval.rs  include_paths.rs  iterator_stack.rs
panko-sema/: Cargo.toml
panko-sema/src/: fake_trait_impls.rs  layout.rs  lib.rs  map_with.rs  nonempty.rs  scope.rs  ty.rs  typecheck.rs
panko-sema/src/layout/: as_sexpr.rs  stack.rs
panko-sema/src/scope/: as_sexpr.rs  scopes.rs
panko-sema/src/ty/: subobjects.rs
panko-sema/src/typecheck/: as_sexpr.rs  constexpr.rs  diagnostics.rs  literal.rs  ptr.rs  tests.rs
panko/src/: main.rs
panko/tests/: compiletest.rs
panko/tests/cases/: test_error_arity_mismatch_in_function_call.c  test_error_array_redeclaration_with_incompatible_length.c  test_error_definition_of_array_of_unknown_size.c  test_error_incompatible_operand_types_in_conditional.c  test_error_incompatible_pointer_types_in_conditional.c  test_error_integer_literal_too_large.c  test_error_invalid_explicit_cast.c  test_error_invalid_first_operand_for_conditional_operator.c  test_error_invalid_generic_selection.c  test_error_invalid_implicit_conversion.c  test_error_invalid_lengthof_of_array_of_unknown_size.c  test_error_invalid_operand_for_addressof.c  test_error_invalid_ptrdiff.c  (+10 more)
(+2475 files in other folders)
