cargo-features = ["codegen-backend"]

[workspace]
resolver = "3"
members = [
    "panko",
    "panko-codegen",
    "panko-derive-report",
    "panko-lex",
    "panko-parser",
    "panko-report",
    "panko-sema",
]

[workspace.lints.rust]
unqualified_local_imports = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
as_conversions = "warn"
# TODO: remove this and `expect` the warning for each enum separately
large_enum_variant = "allow"

[workspace.dependencies]
bumpalo = "3.17.0"
clap = { version = "4.5.32", features = ["derive"] }
color-eyre = "0.6.3"
indexmap = "2.8.0"
itertools = "0.14.0"
lalrpop = "0.22.1"
lalrpop-util = { version = "0.22.1", features = ["unicode"] }
logos = { version = "0.15.0", features = ["forbid_unsafe"] }
proc-macro2 = "1.0.94"
quote = "1.0.40"
regex = "1.11.1"
syn = { version = "2.0.100", features = ["fold", "visit"] }
variant-types = { git = "https://github.com/narpfel/crabbing-interpreters" }
yansi = { version = "1.0.1", features = ["detect-tty"] }

insta-cmd = "0.6.0"
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
rstest = { version = "0.25.0", default-features = false }
tempfile = "3.19.1"

[workspace.dependencies.ariadne]
git = "https://github.com/narpfel/ariadne"
branch = "underlines-for-unlabeled"
features = ["auto-color"]

[profile.perf]
inherits = "release"
debug = 2
lto = true
codegen-units = 1

[profile.clif]
inherits = "dev"
codegen-backend = "cranelift"
debug = "line-tables-only"

[profile.clif.package."*"]
opt-level = 3
codegen-backend = "llvm"
