cargo-features = ["codegen-backend"]

[workspace]
resolver = "3"
members = [
    "panko",
    "panko-codegen",
    "panko-compiletest",
    "panko-derive-report",
    "panko-lex",
    "panko-parser",
    "panko-report",
    "panko-sema",
]

[workspace.lints.rust]
# TODO: this will require a lot of changes
mismatched_lifetime_syntaxes = "allow"
unqualified_local_imports = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
as_conversions = "warn"
# TODO: remove this and `expect` the warning for each enum separately
large_enum_variant = "allow"

[workspace.dependencies]
bumpalo = "3.20.2"
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
indexmap = "2.13.0"
itertools = "0.14.0"
lalrpop = "0.23.1"
lalrpop-util = { version = "0.23.1", features = ["unicode"] }
logos = { version = "0.16.1", features = ["forbid_unsafe"] }
memchr = "2.8.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
regex = "1.12.3"
syn = { version = "2.0.117", features = ["fold", "visit"] }
variant-types = { git = "https://github.com/narpfel/crabbing-interpreters" }
yansi = { version = "1.0.1", features = ["detect-tty"] }

glob = "0.3.3"
insta-cmd = "0.6.0"
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
tempfile = "3.27.0"

[workspace.dependencies.ariadne]
git = "https://github.com/narpfel/ariadne"
branch = "panko"
features = ["auto-color"]

[profile.perf]
inherits = "release"
debug = 2
lto = true
codegen-units = 1

[profile.dev]
debug = false

[profile.clif]
inherits = "dev"
codegen-backend = "cranelift"
debug = "line-tables-only"

[profile.clif.package."*"]
opt-level = 3
codegen-backend = "llvm"

# TODO: `panko-compiletest` requires unwinding support/`catch_unwind`, so we
# can’t use the cranelift backend until unwinding support is done
[profile.clif.package.panko-compiletest]
codegen-backend = "llvm"
