[package]
name = "panko-compiletest"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
color-eyre = { workspace = true }
insta-cmd = { workspace = true }
itertools = { workspace = true }
pretty_assertions = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
