[package]
name = "panko-derive-report"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
indexmap = { workspace = true }
itertools = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
regex = { workspace = true }
syn = { workspace = true }
