[package]
name = "panko-lex"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
ariadne = { workspace = true }
bumpalo = { workspace = true }
itertools = { workspace = true }
logos = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
