[package]
name = "panko-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = { workspace = true }
bumpalo = { workspace = true }
itertools = { workspace = true }
lalrpop-util = { workspace = true }
panko-derive-report = { path = "../panko-derive-report" }
panko-lex = { path = "../panko-lex" }

[build-dependencies]
lalrpop = { workspace = true }
