[package]
name = "panko-parser"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
ariadne = { workspace = true }
bumpalo = { workspace = true }
itertools = { workspace = true }
lalrpop-util = { workspace = true }
panko-lex = { path = "../panko-lex" }
panko-report = { path = "../panko-report" }
yansi = { workspace = true }

[build-dependencies]
lalrpop = { workspace = true }
