[package]
name = "panko-sema"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = { workspace = true }
bumpalo = { workspace = true }
itertools = { workspace = true }
panko-derive-report = { path = "../panko-derive-report" }
panko-lex = { path = "../panko-lex" }
panko-parser = { path = "../panko-parser" }
