[package]
name = "panko"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
panko-codegen = { path = "../panko-codegen" }
panko-lex = { path = "../panko-lex" }
panko-parser = { path = "../panko-parser" }
panko-sema = { path = "../panko-sema" }
yansi = { workspace = true }

[dev-dependencies]
insta-cmd = { workspace = true }
itertools = { workspace = true }
pretty_assertions = { workspace = true }
regex = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
